Closed Bug 417564 Opened 17 years ago Closed 17 years ago

protect against Obj-C exceptions in "accessible" top-level directory

Categories

(Core :: Disability Access APIs, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta4

People

(Reporter: jaas, Assigned: bent.mozilla)

References

()

Details

Attachments

(1 file)

For implementing the strategy we decided on in bug 163260 we are filing a bug for each top-level directory that needs work. mozilla/accessible
Assignee: joshmoz → stanshebs
Flags: blocking1.9+
-> me
Priority: -- → P1
Target Milestone: --- → mozilla1.9beta4
I was working on this one already, seems a waste to have two people doing the same patch. :-)
Attached patch Patch, v1Splinter Review
Attachment #304602 - Flags: review?(joshmoz)
Attachment #304602 - Flags: superreview?(roc)
Attachment #304602 - Flags: review?(joshmoz)
Attachment #304602 - Flags: review+
Attachment #304602 - Flags: superreview?(roc) → superreview+
Assignee: stanshebs → bent.mozilla
Fixed.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Depends on: 450531
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: