Bug 417564 - "protect against Obj-C exceptions in 'accessible' top-level directory". r=josh, sr=roc, a=blocking1.9+.