accessible/src/mac/mozAccessibleWrapper.h
@@ -38,6 +38,8 @@
  
 #include "nsAccessibleWrap.h"
 
+#include "nsObjCExceptions.h"
+
 #import "mozAccessible.h"
 
 /* Wrapper class.  
@@ -56,15 +58,23 @@
 struct AccessibleWrapper {
   mozAccessible *object;
   AccessibleWrapper (nsAccessibleWrap *parent, Class classType) {
+    NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
     object = (mozAccessible*)[[classType alloc] initWithAccessible:parent];
+
+    NS_OBJC_END_TRY_ABORT_BLOCK;
   }
 
   ~AccessibleWrapper () {
+    NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
     // if some third-party still holds on to the object, it's important that it is marked
     // as expired, so it can't do any harm (e.g., walk into an expired hierarchy of nodes).
     [object expire];
     
     [object release];
+
+    NS_OBJC_END_TRY_ABORT_BLOCK;
   }
 
   mozAccessible* getNativeObject () {
@@ -72,6 +82,10 @@ struct AccessibleWrapper {
   }
  
   PRBool isIgnored () {
+    NS_OBJC_BEGIN_TRY_ABORT_BLOCK_RETURN;
+
     return (PRBool)[object accessibilityIsIgnored];
+
+    NS_OBJC_END_TRY_ABORT_BLOCK_RETURN(PR_FALSE);
   }
 };
